--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -45,7 +45,7 @@
         <li><a href="contact.html">Contact</a></li>
         <li><a href="aboutus.html">About us</a></li>
       </ul>
-      <p> © All Rights Reserved FETI Entertainment 2026 | Privacy | Terms of use
+      <p> &copy; All Rights Reserved FETI Entertainment 2026 | Privacy | Terms of use
   Site Build by ESGUERRA | Site Design by CAMONIAS </p>
     </nav>
   </footer>
