--- a/contact.html
+++ b/contact.html
@@ -24,12 +24,30 @@
     </nav>
   </header>
 
+<h1>NEED TO CONTACT US?</h1>
+<h2>Get in touch with us for questions, feedback, or support.</h2>
 
-
-
-
-
-
+<div class="box">
+    <div class="box faqs">
+        <p class="tip">FAQs</p>
+        <p class="second-text">Find quick answers to common questions about gameplay, mechanics, progress, and technical requirements. This section helps you understand the game and resolve issues without delay.</p>
+    </div>
+    <div class="box support">
+        <p class="tip">SUPPORT</p>
+        <p class="second-text">Lorem Ipsum</p>
+    </div>
+    <div class="box feedback">
+        <p class="tip">Feedback & Suggestions</p>
+        <p class="second-text">Share your thoughts, suggestions, and feature ideas. Your feedback helps shape future updates and improve the overall direction of the game.</p>
+    </div>
+</div>
+  <h3> FOLLOW US </h3>
+<img src="discord.png" class="media-icons">
+<img src="youtube.png" class="media-icons">
+<img src="instagram.png" class="media-icons">
+<img src="twitter.png" class="media-icons">
+<h4> SEND US AN EMAIL </h4>
+<p>fetientertainment@gmail.com</p>
 
 
 
