--- a/html/contact.html
+++ b/html/contact.html
@@ -42,10 +42,10 @@
     </div>
 </div>
   <h3> FOLLOW US </h3>
-<img src="discord.png" class="media-icons">
-<img src="youtube.png" class="media-icons">
-<img src="instagram.png" class="media-icons">
-<img src="twitter.png" class="media-icons">
+<img class="media-icons" src="discord.png">
+<img class="media-icons" src="youtube.png">
+<img class="media-icons" src="instagram.png">
+<img class="media-icons" src="twitter.png">
 <h4> SEND US AN EMAIL </h4>
 <p>fetientertainment@gmail.com</p>
 
