--- a/html/home.html
+++ b/html/home.html
@@ -18,13 +18,17 @@
   <header> 
     <nav class="header-nav">
       <div class="header">
-        <a href="home.html">Home</a>
-        <a href="game.html">Game</a>
-        <a href="contact.html">Contact</a>
-        <a href="aboutus.html">About us</a>
+        <img class="header-logo" src="/img/logo.png" alt="">
+        <div class="middle">
+          <a href="home.html">Home</a>
+          <a href="game.html">Game</a>
+          <a href="contact.html">Contact</a>
+          <a href="aboutus.html">About us</a>
+        </div>
+        
+        <img class="header-logo" src="/img/logo.png" alt="">
       </div>
     </nav>
-
   </header>
 
 <!-- main -->
@@ -32,13 +36,12 @@
     <div class="bg">
       <div class="relative">
         <img class="body-bg" src="/img/body-bg.jpg" alt="">
-       <div class="poet">
+        <div class="poet">
           <img class="poet-img" src="/img/logo.png" alt="">
-       </div>
-       </div>
+        </div>
+      </div>
     </div>
   </main>
-
 
 <!-- footer -->
   <footer>
@@ -50,58 +53,102 @@
 
 <style>
 
-  p{
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  background-color: black;
+}
 
-  body{
-    background-color: black;
-  } .bg {
+.bg {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
   min-height: 100vh;
+  top: 0;
 }
 
-.bg .body-bg {
+.relative {
   position: relative;
-  width:2000px;       
-  height: auto;        
-  object-fit: cover;
-} 
-
-.relative{
-  position: relative;
-} .poet{
+}  .relative:before{
+    content: "";
     position: absolute;
-    left: 100px;
-    top: 50%;
-    transform: translate(-50%);
-  } .poet .poet-img{
-      width: 800px;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 50px;
+    background: linear-gradient(to top, transparent, black);
+    pointer-events: none;
     }
 
+.relative:after{
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 300px;
+    background: linear-gradient(to bottom, transparent, black);
+    pointer-events: none;
+    }
 
-  .header{
+.bg .body-bg {
+  max-width: 100%;
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  display: block;
+}
+
+.poet {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.poet .poet-img {
+  width: 800px;
+  max-width: 90vw;
+  height: auto;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 50px;
+  z-index: 100;
+  margin-left: 0;
+  margin-right: 0;
+  margin-bottom: 0;
+  padding-top: 10px;
+  font-size: 30px;
+} .middle{
     display: flex;
-    justify-content: center;
     gap: 100px;
-    z-index: 100;
-    margin-bottom: 20px ;
-    padding-top: 10px;
-    font-size: 30px;
-  }
-  .header a{
-    text-decoration: none;
-    color: white;
   }
 
+.header a {
+  text-decoration: none;
+  color: white;
+}
+
+.header-logo{
+  width: 150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+p {
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 </style>
-
 
 </html>
