--- a/html/home.html
+++ b/html/home.html
@@ -45,8 +45,8 @@
 
 <!-- footer -->
   <footer>
-    <p>&copy; All Rights Reserved FETI Entertainment 2026 | Privacy | Terms of use 
-      | Site Build by ESGUERRA | Site Design by CAMONIAS</p>
+    <p>&copy; All Rights Reserved FETI Entertainment 2026 &vert; Privacy &vert; Terms of use 
+      &vert; Site Build by ESGUERRA &vert; Site Design by CAMONIAS</p>
   </footer>
 
 </body>
@@ -71,13 +71,14 @@ body {
 
 .relative {
   position: relative;
+  top: -33px;
 }  .relative:before{
     content: "";
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    height: 50px;
+    height: 30px;
     background: linear-gradient(to top, transparent, black);
     pointer-events: none;
     }
@@ -123,8 +124,10 @@ body {
   margin-left: 0;
   margin-right: 0;
   margin-bottom: 0;
+  margin-top: -40px;
   padding-top: 10px;
   font-size: 30px;
+
 } .middle{
     display: flex;
     gap: 100px;
@@ -137,9 +140,13 @@ body {
 
 .header-logo{
   width: 150px;
+  top: -1;
   display: flex;
   justify-content: center;
   align-items: center;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 5px;
 }
 
 p {
