--- a/html/contact.html
+++ b/html/contact.html
@@ -34,25 +34,20 @@
     </div>
     <div class="box support">
         <p class="tip">SUPPORT</p>
-        <p class="second-text">Lorem Ipsum</p>
+        <p class="second-text">Report glitches, crashes, or unexpected behavior you experience while playing. Your reports help improve performance, balance, and overall game stability.</p>
     </div>
     <div class="box feedback">
         <p class="tip">Feedback & Suggestions</p>
         <p class="second-text">Share your thoughts, suggestions, and feature ideas. Your feedback helps shape future updates and improve the overall direction of the game.</p>
     </div>
 </div>
-  <h3> FOLLOW US </h3>
-<img class="media-icons" src="discord.png">
-<img class="media-icons" src="youtube.png">
-<img class="media-icons" src="instagram.png">
-<img class="media-icons" src="twitter.png">
+<h3> FOLLOW US </h3>
+<img class="media-icons" src="/img/discord.png">
+<img class="media-icons" src="/img/youtube.png">
+<img class="media-icons" src="/img/instagram.png">
+<img class="media-icons" src="/img/twitter.png">
 <h4> SEND US AN EMAIL </h4>
 <p>fetientertainment@gmail.com</p>
-
-
-
-
-
 
 
   <footer>
