Fixing the header of home html

--- a/Whole/html/aboutus.html
+++ b/Whole/html/aboutus.html
@@ -6,7 +6,7 @@
   <title>Price of Every Tomorrow</title>
 
   <!-- files -->
-  <link rel="stylesheet" href="css/about-us.css">
+  <link rel="stylesheet" href="../css/about-us.css">
   <!-- fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
