--- a/Whole/html/home.html
+++ b/Whole/html/home.html
@@ -8,7 +8,9 @@
   <!-- files -->
   <link rel="stylesheet" href="../css/home.css">
   <!-- fonts -->
+   <!-- horizon alternative -->
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
+  <!-- etna alternative -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 
 </head>
