--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -24,7 +24,35 @@
     </nav>
   </header>
 
+  <h1>ABOUT US</h1>
+  <h2>A small team focused on meaningful player decisions.</h2>
+ <p>We are a team of Filipino students from Golden Faith Academy, passionate about creating games that reflect real issues in the Philippines. Our goal is to combine engaging gameplay with meaningful stories that make players think. We focus on challenges like social unrest, corruption, and everyday struggles, turning them into experiences that entertain and educate. Through our games, we aim to share our perspective, spark discussion, and inspire change.
 
+We believe games can be more than just entertainment. They can teach lessons, raise awareness, and encourage empathy. Every project we create is carefully designed to show the realities of our society while giving players the freedom to make choices and explore consequences. Our team works together to bring creativity, research, and culture into every game we build. We hope our games not only challenge players but also highlight the resilience, diversity, and spirit of the Filipino people.
+</p>
+
+<div class="box">
+    <div class="box values">
+        <p class="tip">OUR VALUES</p>
+        <p class="second-text">&bull; Creativity and innovation in every project
+&bull; Honesty and responsibility in portraying real issues
+&bull; Respect for culture and community
+&bull; Commitment to quality and meaningful gameplay</p>
+    </div>
+    <div class="box purpose">
+        <p class="tip">OUR PURPOSE</p>
+        <p class="second-text">&bull; To create games that educate, inspire, and engage
+&bull; To give players insight into social and cultural issues in the Philippines
+&bull; To encourage discussion and reflection through interactive storytelling
+Our Goal</p>
+    </div>
+    <div class="box goal">
+        <p class="tip">OUR GOAL</p>
+        <p class="second-text">&bull; To build a portfolio of games that combine entertainment with social awareness
+&bull; To grow as a team while sharing Filipino stories with the world
+&bull; To make a positive impact on players and society through meaningful game experiences</p>
+    </div>
+</div>
 
 
 
