--- a/Whole/html/aboutus.html
+++ b/Whole/html/aboutus.html
@@ -34,23 +34,23 @@ We believe games can be more than just entertainment. They can teach lessons, ra
 <div class="box">
     <div class="box values">
         <p class="tip">OUR VALUES</p>
-        <p class="second-text">&bull; Creativity and innovation in every project
-&bull; Honesty and responsibility in portraying real issues
-&bull; Respect for culture and community
-&bull; Commitment to quality and meaningful gameplay</p>
+        <p class="second-text"><br>&bull; Creativity and innovation in every project
+<br>&bull; Honesty and responsibility in portraying real issues
+<br>&bull; Respect for culture and community
+<br>&bull; Commitment to quality and meaningful gameplay</p>
     </div>
     <div class="box purpose">
         <p class="tip">OUR PURPOSE</p>
         <p class="second-text">&bull; To create games that educate, inspire, and engage
-&bull; To give players insight into social and cultural issues in the Philippines
-&bull; To encourage discussion and reflection through interactive storytelling
+<br>&bull; To give players insight into social and cultural issues in the Philippines
+<br>&bull; To encourage discussion and reflection through interactive storytelling
 Our Goal</p>
     </div>
     <div class="box goal">
         <p class="tip">OUR GOAL</p>
-        <p class="second-text">&bull; To build a portfolio of games that combine entertainment with social awareness
-&bull; To grow as a team while sharing Filipino stories with the world
-&bull; To make a positive impact on players and society through meaningful game experiences</p>
+        <p class="second-text"><br>&bull; To build a portfolio of games that combine entertainment with social awareness
+<br>&bull; To grow as a team while sharing Filipino stories with the world
+<br>&bull; To make a positive impact on players and society through meaningful game experiences</p>
     </div>
 </div>
 
