added css for home page and fix the header and footer

--- a/Whole/html/home.html
+++ b/Whole/html/home.html
@@ -6,8 +6,11 @@
   <title>Price of Every Tomorrow</title>
 
   <!-- files -->
-  <link rel="stylesheet" href="../css/home.css">
-  <!-- fonts -->
+  <link rel="stylesheet" href="../css/home-header.css">
+  <link rel="stylesheet" href="../css/home-body.css">
+  <link rel="stylesheet" href="../css/home-general.css">
+
+      <!-- fonts -->
    <!-- horizon alternative -->
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
   <!-- etna alternative -->
@@ -22,7 +25,7 @@
       <div class="header">
         <img class="header-logo" src="/img/logo.png" alt="">
         <div class="middle">
-          <a href="home.html">Home</a>
+          <a href="home.html" class="active">Home</a>
           <a href="game.html">Game</a>
           <a href="contact.html">Contact</a>
           <a href="aboutus.html">About us</a>
@@ -41,12 +44,27 @@
         <div class="poet">
           <img class="poet-img" src="/img/logo.png" alt="">
         </div>
+        <div class="watch-trailer"> WATCH TRAILER</div>
       </div>
     </div>
-  </main>
+  </div>
+ </main>
+
+ <hr class="section2">
+    
+    <div class="section-2">
+      <div class="apps">AVAILABLE ON</div>
+    </div>
+
 
 <!-- footer -->
-  <footer>
+  <footer class="footer">
+    <div class="middle">
+          <a href="home.html" class="active">Home</a>
+          <a href="game.html">Game</a>
+          <a href="contact.html">Contact</a>
+          <a href="aboutus.html">About us</a>
+        </div>
     <p>&copy; All Rights Reserved FETI Entertainment 2026 &vert; Privacy &vert; Terms of use 
       &vert; Site Build by ESGUERRA &vert; Site Design by CAMONIAS</p>
   </footer>
