--- a/Whole/html/aboutus.html
+++ b/Whole/html/aboutus.html
@@ -43,7 +43,7 @@
                   <h1>ABOUT US</h1>
                   <h2>A small team focused on meaningful player decisions.</h2>
                 <p>We are a team of Filipino students from Golden Faith Academy, passionate about creating games that reflect real issues in the Philippines. Our goal is to combine engaging gameplay with meaningful stories that make players think. We focus on challenges like social unrest, corruption, and everyday struggles, turning them into experiences that entertain and educate. Through our games, we aim to share our perspective, spark discussion, and inspire change.
-                We believe games can be more than just entertainment. They can teach lessons, raise awareness, and encourage empathy. Every project we create is carefully designed to show the realities of our society while giving players the freedom to make choices and explore consequences. Our team works together to bring creativity, research, and culture into every game we build. We hope our games not only challenge players but also highlight the resilience, diversity, and spirit of the Filipino people.
+ <br><br>We believe games can be more than just entertainment. They can teach lessons, raise awareness, and encourage empathy. Every project we create is carefully designed to show the realities of our society while giving players the freedom to make choices and explore consequences. Our team works together to bring creativity, research, and culture into every game we build. We hope our games not only challenge players but also highlight the resilience, diversity, and spirit of the Filipino people.
                 </p>
               </div>
       </div>
@@ -51,16 +51,6 @@
     </div>
   </div>
  </main>
-
-  <hr class="section2">
-
- <div class="page-header">
-    <h1>ABOUT US</h1>
-    <h2>A small team focused on meaningful player decisions.</h2>
-  <p>We are a team of Filipino students from Golden Faith Academy, passionate about creating games that reflect real issues in the Philippines. Our goal is to combine engaging gameplay with meaningful stories that make players think. We focus on challenges like social unrest, corruption, and everyday struggles, turning them into experiences that entertain and educate. Through our games, we aim to share our perspective, spark discussion, and inspire change.
-  We believe games can be more than just entertainment. They can teach lessons, raise awareness, and encourage empathy. Every project we create is carefully designed to show the realities of our society while giving players the freedom to make choices and explore consequences. Our team works together to bring creativity, research, and culture into every game we build. We hope our games not only challenge players but also highlight the resilience, diversity, and spirit of the Filipino people.
-  </p>
-</div>
 
 <div class="box">
     <div class="box values">
