BODY AND LITTLE REVISE ON HEADER

--- a/Whole/html/home.html
+++ b/Whole/html/home.html
@@ -54,16 +54,22 @@
   </div>
  </main>
 
-    
+<!-- section 2 -->
     <div class="section-2">
-      <div class="apps">AVAILABLE ON</div>
+      <div class="apps-title">AVAILABLE ON</div>
     </div>
 
+    <div class="apps">
+      <img src="/img/steam.png" alt="">
+      <img src="/img/playstation-logotype.png" alt="">
+      <img src="/img/xbox-logo.png" alt="">
+    </div>
+
+    <div class="get-now"> GET NOW</div>
 
 <!-- footer -->
   <footer class="footer">
-    
-        </div>
+
     <p>&copy; All Rights Reserved FETI Entertainment 2026 &vert; Privacy &vert; Terms of use 
       &vert; Site Build by ESGUERRA &vert; Site Design by CAMONIAS</p>
   </footer>
