--- a/Whole/html/contact.html
+++ b/Whole/html/contact.html
@@ -8,7 +8,6 @@
   <!-- files -->
   <link rel="stylesheet" href="../css/contact.css">
   <link rel="stylesheet" href="../css/home-header.css">
-  <link rel="stylesheet" href="../css/home-general.css">
   <!-- fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
@@ -39,14 +38,14 @@
     <div class="bg">
       <div class="relative">
         <img class="body-bg" src="/img/body-bg.jpg" alt="">
+        <div class="page-header">
+                  <h1>NEED TO CONTACT US?</h1>
+                  <h2>Get in touch with us for questions, feedback, or support.</h2>
+              </div>
       </div>
     </div>
   </div>
  </main>
-
-<h1>NEED TO CONTACT US?</h1>
-<h2>Get in touch with us for questions, feedback, or support.</h2>
-
 <div class="box">
     <div class="box faqs">
         <p class="tip">FAQs</p>
