--- a/Whole/html/contact.html
+++ b/Whole/html/contact.html
@@ -46,19 +46,22 @@
     </div>
   </div>
  </main>
-<div class="box">
-    <div class="box faqs">
+<div class="boxs">
+    <div class="box">
         <p class="tip">FAQs</p>
         <p class="second-text">Find quick answers to common questions about gameplay, mechanics, progress, and technical requirements. This section helps you understand the game and resolve issues without delay.</p>
+        <button> <b>FAQS</b> </button>
     </div>
-    <div class="box support">
+    <div class="box">
         <p class="tip">SUPPORT</p>
         <p class="second-text">Report glitches, crashes, or unexpected behavior you experience while playing. Your reports help improve performance, balance, and overall game stability.</p>
-    </div>
-    <div class="box feedback">
+        <button> <b>SUPPORT</b> </button>
+      </div>
+    <div class="box">
         <p class="tip">Feedback & Suggestions</p>
         <p class="second-text">Share your thoughts, suggestions, and feature ideas. Your feedback helps shape future updates and improve the overall direction of the game.</p>
-    </div>
+        <button> <b>FEEDBACK</b> </button>
+      </div>
 </div>
 <h3> FOLLOW US </h3>
 <img class="media-icons" src="/img/discord.png">
