--- a/Whole/html/contact.html
+++ b/Whole/html/contact.html
@@ -46,31 +46,35 @@
     </div>
   </div>
  </main>
-<div class="boxs">
+
+       <div class="boxs">
     <div class="box">
-        <p class="tip">FAQs</p>
+        <p class="tip"><b>FAQs</b></p>
         <p class="second-text">Find quick answers to common questions about gameplay, mechanics, progress, and technical requirements. This section helps you understand the game and resolve issues without delay.</p>
         <button> <b>FAQS</b> </button>
     </div>
     <div class="box">
-        <p class="tip">SUPPORT</p>
+        <p class="tip"><b>SUPPORT</b></p>
         <p class="second-text">Report glitches, crashes, or unexpected behavior you experience while playing. Your reports help improve performance, balance, and overall game stability.</p>
         <button> <b>SUPPORT</b> </button>
       </div>
     <div class="box">
-        <p class="tip">Feedback & Suggestions</p>
+        <p class="tip" id="feed"><b>FEEDBACK & SUGGESTIONS</b></p>
         <p class="second-text">Share your thoughts, suggestions, and feature ideas. Your feedback helps shape future updates and improve the overall direction of the game.</p>
         <button> <b>FEEDBACK</b> </button>
       </div>
 </div>
-<h3> FOLLOW US </h3>
-<img class="media-icons" src="/img/discord.png">
-<img class="media-icons" src="/img/youtube.png">
-<img class="media-icons" src="/img/instagram.png">
-<img class="media-icons" src="/img/twitter.png">
-<h4> SEND US AN EMAIL </h4>
-<p>fetientertainment@gmail.com</p>
+<h3 id="followus"> FOLLOW US </h3>
+<div class="icons">
+  <img class="media-icons" src="/img/discord.png">
+  <img class="media-icons" src="/img/youtube.png">
+  <img class="media-icons" src="/img/instagram.png">
+  <img class="media-icons" src="/img/twitter.png">
+</div>
+<h4 id="email"> SEND US AN EMAIL </h4>
+<p id="gmail">fetientertainment@gmail.com</p>
 
+<br><br>
 
   <footer class="footer">
     <p>&copy; All Rights Reserved FETI Entertainment 2026 &vert; Privacy &vert; Terms of use 
