--- a/Whole/html/aboutus.html
+++ b/Whole/html/aboutus.html
@@ -15,24 +15,21 @@
 </head>
 <body>
   <header> 
-    <nav class="header-nav">
+  <nav class="header-nav">
     <div class="header">
-      <div class="left-nav">
-        <a href="home.html" class="active">Home</a>
-        <a href="game.html">Game</a>
-      </div>
-      
-      <div class="middle-logo">
+      <div class="left-logo">
         <img class="header-logo" src="/img/logo.png" alt="">
       </div>
       
-      <div class="right-nav">
+      <div class="center-nav">
+        <a href="home.html" class="active">Home</a>
+        <a href="game.html">Game</a>
         <a href="contact.html">Contact</a>
         <a href="aboutus.html">About us</a>
       </div>
     </div>
   </nav>
-  </header>
+</header>
 
   <main class="main-body">
     <div class="bg">
