--- a/Whole/html/contact.html
+++ b/Whole/html/contact.html
@@ -7,7 +7,6 @@
 
   <!-- files -->
   <link rel="stylesheet" href="../css/contact.css">
-  <link rel="stylesheet" href="../css/home-header.css">
   <!-- fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
@@ -15,70 +14,64 @@
 </head>
 <body>
   <header> 
-    <nav class="header-nav">
+  <nav class="header-nav">
     <div class="header">
-      <div class="left-nav">
-        <a href="home.html" class="active">Home</a>
-        <a href="game.html">Game</a>
-      </div>
-      
-      <div class="middle-logo">
+      <div class="left-logo">
         <img class="header-logo" src="/img/logo.png" alt="">
       </div>
       
-      <div class="right-nav">
+      <div class="center-nav">
+        <a href="home.html" class="active">Home</a>
+        <a href="game.html">Game</a>
         <a href="contact.html">Contact</a>
         <a href="aboutus.html">About us</a>
       </div>
     </div>
   </nav>
-  </header>
+</header>
 
-<main class="main-body">
-    <div class="bg">
-      <div class="relative">
-        <img class="body-bg" src="/img/body-bg.jpg" alt="">
-        <div class="page-header">
-                  <h1>NEED TO CONTACT US?</h1>
-                  <h2>Get in touch with us for questions, feedback, or support.</h2>
-              </div>
-      </div>
-    </div>
-  </div>
- </main>
+<h1>NEED TO CONTACT US?</h1>
+<h2>Get in touch with us for questions, feedback, or support.</h2>
 
-       <div class="boxs">
-    <div class="box">
-        <p class="tip"><b>FAQs</b></p>
+<div class="box">
+    <div class="box faqs">
+        <p class="tip">FAQs</p>
         <p class="second-text">Find quick answers to common questions about gameplay, mechanics, progress, and technical requirements. This section helps you understand the game and resolve issues without delay.</p>
-        <button> <b>FAQS</b> </button>
     </div>
-    <div class="box">
-        <p class="tip"><b>SUPPORT</b></p>
-        <p class="second-text">Report glitches, crashes, or unexpected behavior you experience while playing. Your reports help improve performance, balance, and overall game stability.</p>
-        <button> <b>SUPPORT</b> </button>
-      </div>
-    <div class="box">
-        <p class="tip" id="feed"><b>FEEDBACK & SUGGESTIONS</b></p>
+    <div class="box support">
+        <p class="tip">SUPPORT</p>
+        <p class="second-text">Lorem Ipsum</p>
+    </div>
+    <div class="box feedback">
+        <p class="tip">Feedback & Suggestions</p>
         <p class="second-text">Share your thoughts, suggestions, and feature ideas. Your feedback helps shape future updates and improve the overall direction of the game.</p>
-        <button> <b>FEEDBACK</b> </button>
-      </div>
+    </div>
 </div>
-<h3 id="followus"> FOLLOW US </h3>
-<div class="icons">
-  <img class="media-icons" src="/img/discord.png">
-  <img class="media-icons" src="/img/youtube.png">
-  <img class="media-icons" src="/img/instagram.png">
-  <img class="media-icons" src="/img/twitter.png">
-</div>
-<h4 id="email"> SEND US AN EMAIL </h4>
-<p id="gmail">fetientertainment@gmail.com</p>
+  <h3> FOLLOW US </h3>
+<img class="media-icons" src="discord.png">
+<img class="media-icons" src="youtube.png">
+<img class="media-icons" src="instagram.png">
+<img class="media-icons" src="twitter.png">
+<h4> SEND US AN EMAIL </h4>
+<p>fetientertainment@gmail.com</p>
 
-<br><br>
 
-  <footer class="footer">
-    <p>&copy; All Rights Reserved FETI Entertainment 2026 &vert; Privacy &vert; Terms of use 
-      &vert; Site Build by ESGUERRA &vert; Site Design by CAMONIAS</p>
+
+
+
+
+
+  <footer>
+    <nav>
+      <ul>
+        <li><a href="home.html">Home</a></li>
+        <li><a href="game.html">Game</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="aboutus.html">About us</a></li>
+      </ul>
+      <p> &copy; All Rights Reserved FETI Entertainment 2026 | Privacy | Terms of use
+  Site Build by ESGUERRA | Site Design by CAMONIAS </p>
+    </nav>
   </footer>
 
 </body>
