--- a/Whole/html/game.html
+++ b/Whole/html/game.html
@@ -13,15 +13,24 @@
 
 </head>
 <body>
-  <header> 
-    <nav>
-      <ul>
-        <li><a href="home.html">Home</a></li>
-        <li><a href="game.html">Game</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="aboutus.html">About us</a></li>
-      </ul>
-    </nav>
+  
+  <div class="second-border">
+    <p>All Rights Reserved FETI Entertainment 2026 &vert; Privacy &vert; Terms of use 
+      &vert; Site Build by ESGUERRA &vert; Site Design by CAMONIAS</p>
+  </div>
+ <header> 
+  <nav class="header-nav">
+    <div class="header">
+      <div class="left-logo">
+        <img class="header-logo" src="/img/logo.png" alt="">
+      </div>
+      
+      <div class="center-nav">
+        <a href="home.html" class="active">Home</a>
+        <a href="game.html">Game</a>
+        <a href="contact.html">Contact</a>
+        <a href="aboutus.html">About us</a>
+      </div>
   </header>
 
 
@@ -37,17 +46,11 @@
 
 
 
-  <footer>
-    <nav>
-      <ul>
-        <li><a href="home.html">Home</a></li>
-        <li><a href="game.html">Game</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="aboutus.html">About us</a></li>
-      </ul>
-      <p> &copy; All Rights Reserved FETI Entertainment 2026 | Privacy | Terms of use
-  Site Build by ESGUERRA | Site Design by CAMONIAS </p>
-    </nav>
+  <!-- footer -->
+  <footer class="footer">
+
+    <p>&copy; All Rights Reserved FETI Entertainment 2026 &vert; Privacy &vert; Terms of use 
+      &vert; Site Build by ESGUERRA &vert; Site Design by CAMONIAS</p>
   </footer>
 
 </body>
