--- a/aboutus.html
+++ b/aboutus.html
@@ -6,8 +6,8 @@
   <title>Price of Every Tomorrow</title>
 
   <!-- files -->
-  <link rel="stylesheet" href="../css/about-us.css">
-  <link rel="stylesheet" href="../css/home-header.css">
+  <link rel="stylesheet" href="css/about-us.css">
+  <link rel="stylesheet" href="css/home-header.css">
   <!-- fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
