--- a/home.html
+++ b/home.html
@@ -6,9 +6,9 @@
   <title>Price of Every Tomorrow</title>
 
   <!-- files -->
-  <link rel="stylesheet" href="../css/home-header.css">
-  <link rel="stylesheet" href="../css/home-body.css">
-  <link rel="stylesheet" href="../css/home-general.css">
+  <link rel="stylesheet" href="css/home-header.css">
+  <link rel="stylesheet" href="css/home-body.css">
+  <link rel="stylesheet" href="css/home-general.css">
 
       <!-- fonts -->
    <!-- horizon alternative -->
