--- a/aboutus.html
+++ b/aboutus.html
@@ -22,7 +22,7 @@
       </div>
       
       <div class="center-nav">
-        <a href="home.html" class="active">Home</a>
+        <a href="index.html" class="active">Home</a>
         <a href="game.html">Game</a>
         <a href="contact.html">Contact</a>
         <a href="aboutus.html">About us</a>
