--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <nav class="header-nav">
     <div class="header">
       <div class="left-logo">
-        <img class="header-logo" src="/img/logo.png" alt="">
+        <img class="header-logo" src="img/logo.png" alt="">
       </div>
       
       <div class="center-nav">
@@ -44,9 +44,9 @@
   <main class="main-body">
     <div class="bg">
       <div class="relative">
-        <img class="body-bg" src="/img/body-bg.jpg" alt="">
+        <img class="body-bg" src="img/body-bg.jpg" alt="">
         <div class="poet">
-          <img class="poet-img" src="/img/logo.png" alt="">
+          <img class="poet-img" src="img/logo.png" alt="">
         </div>
         <div class="watch-trailer"> WATCH TRAILER</div>
       </div>
@@ -61,26 +61,26 @@
 
     <div class="apps">
       <a href="https://store.steampowered.com/">
-        <img src="/img/steam.png">
+        <img src="img/steam.png">
       </a>
       <a href="https://www.playstation.com/en-ph/ps5/?emcid=pa-co-520100&gclsrc=aw.ds&gad_source=1&gad_campaignid=20725018209&gbraid=0AAAAAqPsW7joCC3cnD-ItJkN1uPj0r4W-&gclid=Cj0KCQiAnJHMBhDAARIsABr7b84Ar6xKuJ42L5jjMZNLxE8FqXscS9wfDY9w943E9GwKuxZjY8J2Lf0aAs4BEALw_wcB">
-        <img src="/img/playstation-logotype.png" alt="">
+        <img src="img/playstation-logotype.png" alt="">
       </a>
       <a href="https://www.xbox.com/en-IN/">
-        <img src="/img/xbox-logo.png" alt="">
+        <img src="img/xbox-logo.png" alt="">
       </a>
       
     </div>
 
     <div class="get-now"> GET NOW</div>
     <br><br>
-    <div class="line-img"><img src="/img/Line.png" alt=""> </div>
+    <div class="line-img"><img src="img/Line.png" alt=""> </div>
 
 
   <!-- section 3 -->  
     <div class="section3-header">
         <div class="right-arrow">
-          <img src="/img/arrow-logo.png" alt="">
+          <img src="img/arrow-logo.png" alt="">
         </div>
 
         <div class="middle-text">
@@ -88,7 +88,7 @@
         </div>
 
         <div class="left-arrow">
-          <img src="/img/arrow-logo.png" alt="">
+          <img src="img/arrow-logo.png" alt="">
         </div>
     </div>
 
