--- a/aboutus.html
+++ b/aboutus.html
@@ -18,7 +18,7 @@
   <nav class="header-nav">
     <div class="header">
       <div class="left-logo">
-        <img class="header-logo" src="/img/logo.png" alt="">
+        <img class="header-logo" src="img/logo.png" alt="">
       </div>
       
       <div class="center-nav">
@@ -34,7 +34,7 @@
   <main class="main-body">
     <div class="bg">
       <div class="relative">
-        <img class="body-bg" src="/img/body-bg.jpg" alt="">
+        <img class="body-bg" src="img/body-bg.jpg" alt="">
         <div class="page-header">
                   <h1>ABOUT US</h1>
                   <h2>A small team focused on meaningful player decisions.</h2>
