--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
   <nav class="header-nav">
     <div class="header">
       <div class="left-logo">
-        <img class="header-logo" src="/img/logo.png" alt="">
+        <img class="header-logo" src="img/logo.png" alt="">
       </div>
       
       <div class="center-nav">
@@ -48,10 +48,10 @@
     </div>
 </div>
   <h3> FOLLOW US </h3>
-<img class="media-icons" src="discord.png">
-<img class="media-icons" src="youtube.png">
-<img class="media-icons" src="instagram.png">
-<img class="media-icons" src="twitter.png">
+<img class="media-icons" src="img/discord.png">
+<img class="media-icons" src="img/youtube.png">
+<img class="media-icons" src="img/instagram.png">
+<img class="media-icons" src="img/twitter.png">
 <h4> SEND US AN EMAIL </h4>
 <p>fetientertainment@gmail.com</p>
 
