--- a/game.html
+++ b/game.html
@@ -22,7 +22,7 @@
   <nav class="header-nav">
     <div class="header">
       <div class="left-logo">
-        <img class="header-logo" src="/img/logo.png" alt="">
+        <img class="header-logo" src="img/logo.png" alt="">
       </div>
       
       <div class="center-nav">
