--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
   <title>Price of Every Tomorrow</title>
 
   <!-- files -->
-  <link rel="stylesheet" href="css/contact.css">
+  <link rel="stylesheet" href="css/contact-us.css">
   <!-- fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
@@ -21,9 +21,9 @@
       </div>
       
       <div class="center-nav">
-        <a href="index.html" class="active">Home</a>
+        <a href="index.html" >Home</a>
         <a href="game.html">Game</a>
-        <a href="contact.html">Contact</a>
+        <a href="contact.html" class="active">Contact</a>
         <a href="aboutus.html">About us</a>
       </div>
     </div>
