--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
 
   <!-- files -->
   <link rel="stylesheet" href="css/contact-us.css">
+  <link rel="stylesheet" href="css/home-header.css">
   <!-- fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
@@ -33,50 +34,32 @@
 <h1>NEED TO CONTACT US?</h1>
 <h2>Get in touch with us for questions, feedback, or support.</h2>
 
+<!-- Changed parent div class -->
 <div class="box">
-    <div class="box faqs">
+    <div class="faqs">
         <p class="tip">FAQs</p>
-        <p class="second-text">Find quick answers to common questions about gameplay, mechanics, progress, and technical requirements. This section helps you understand the game and resolve issues without delay.</p>
+        <p class="second-text">Find quick answers to common questions about gameplay, mechanics, progress, and technical requirements.</p>
     </div>
-    <div class="box support">
+    <div class="support">
         <p class="tip">SUPPORT</p>
-        <p class="second-text">Lorem Ipsum</p>
+        <p class="second-text">Get help with technical issues, bugs, or account problems.</p>
     </div>
-    <div class="box feedback">
+    <div class="feedback">
         <p class="tip">Feedback & Suggestions</p>
-        <p class="second-text">Share your thoughts, suggestions, and feature ideas. Your feedback helps shape future updates and improve the overall direction of the game.</p>
+        <p class="second-text">Share your thoughts, suggestions, and feature ideas.</p>
     </div>
 </div>
-  <h3> FOLLOW US </h3>
-<img class="media-icons" src="img/discord.png">
-<img class="media-icons" src="img/youtube.png">
-<img class="media-icons" src="img/instagram.png">
-<img class="media-icons" src="img/twitter.png">
-<h4> SEND US AN EMAIL </h4>
+
+<h3>FOLLOW US</h3>
+<div class="icons">
+  <img class="media-icons" src="img/discord.png" alt="Discord">
+  <img class="media-icons" src="img/youtube.png" alt="YouTube">
+  <img class="media-icons" src="img/instagram.png" alt="Instagram">
+  <img class="media-icons" src="img/twitter.png" alt="Twitter">
+</div>
+
+<h4>SEND US AN EMAIL</h4>
 <p>fetientertainment@gmail.com</p>
 
 
-
-
-
-
-
-  <footer>
-    <nav>
-      <ul>
-        <li><a href="home.html">Home</a></li>
-        <li><a href="game.html">Game</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="aboutus.html">About us</a></li>
-      </ul>
-      <p> &copy; All Rights Reserved FETI Entertainment 2026 | Privacy | Terms of use
-  Site Build by ESGUERRA | Site Design by CAMONIAS </p>
-    </nav>
-  </footer>
-
-</body>
-
-<style>
-
-</style>
 </html>
