--- a/game.html
+++ b/game.html
@@ -26,8 +26,8 @@
       </div>
       
       <div class="center-nav">
-        <a href="index.html" class="active">Home</a>
-        <a href="game.html">Game</a>
+        <a href="index.html" >Home</a>
+        <a href="game.html" class="active">Game</a>
         <a href="contact.html">Contact</a>
         <a href="aboutus.html">About us</a>
       </div>
