--- a/contact.html
+++ b/contact.html
@@ -34,6 +34,8 @@
 <h1>NEED TO CONTACT US?</h1>
 <h2>Get in touch with us for questions, feedback, or support.</h2>
 
+<div class="line-img"><img src="img/Line.png" alt=""> </div>
+
 <!-- Changed parent div class -->
 <div class="box">
     <div class="faqs">
