--- a/game.html
+++ b/game.html
@@ -13,18 +13,13 @@
 
 </head>
 <body>
-  
-  <div class="second-border">
-    <p>All Rights Reserved FETI Entertainment 2026 &vert; Privacy &vert; Terms of use 
-      &vert; Site Build by ESGUERRA &vert; Site Design by CAMONIAS</p>
-  </div>
+
  <header> 
   <nav class="header-nav">
     <div class="header">
       <div class="left-logo">
         <img class="header-logo" src="img/logo.png" alt="">
       </div>
-      
       <div class="center-nav">
         <a href="index.html" >Home</a>
         <a href="game.html" class="active">Game</a>
@@ -34,7 +29,12 @@
   </header>
 
 
+  <!-- main -->
 
+   <div class="background-img">
+      <img src="img/body-bg.jpg" alt="">
+    </div>
+      
 
 
 
