--- a/game.html
+++ b/game.html
@@ -34,13 +34,56 @@
    <div class="background-img">
       <img src="img/body-bg.jpg" alt="">
     </div>
+    
+  <div class="content">
+    <h1 class="content-header">THE WORLD YOU MUST ENDURE</h1>
+    <div class="content-paragraph">
+      Start with limited resources and survive long enough to escape or rebuild a collapsing nation.
+    </div>
+  </div>
+
+<!-- Section2 -->
+<div class="main-content">
+  <h2 class="about">about</h2>
+  <div class="main-paragraph">
+    <p>The nation once promised stability and progress. Years of unchecked inflation and corrupt leadership shattered that promise. Money lost its value. Trust disappeared. Streets filled with unrest and quiet fear.
+        <br><br>
+      You are an ordinary citizen left behind by the system. You begin with a small stash of resources and no protection from the chaos around you. Each day forces you to choose between survival and change. Obey, resist, escape, or rebuild. Time moves forward no matter what you decide.
+        <br><br>
+      Your story ends in one of two ways. You flee the country before it collapses completely. Or you endure long enough to reshape it into something better. Health fades. Freedom shrinks. The clock never stops.</p>
+  </div>
+</div>
+
+<!-- section3 -->
+<div class="grid-layout">
+
+  <div class="left-section">
+    <div class="left-section-upper">
+        <div class="right-arrow">
+          <img src="img/arrow-logo.png" alt="">
+        </div>
+
+        <div class="middle-text">
+          ULTIMATE OBJECTIVE
+        </div>
+
+        <div class="left-arrow">
+          <img src="img/arrow-logo.png" alt="">
+        </div>
+    </div>
+
+        <div class="left-section-below">
+              <p class="paragraph">
+                Survive long enough to either escape to another country or transform your homeland into a utopian society—before you run out of health, freedom, or time. Players wil encounter dynamic events, randomized opportunities, and moraly chalenging decisions that can alter the course of their survival. Every day in the game world is a gamble between security and ambition.
+              </p>
+      </div>
       
-
-
-
-
-
-
+  </div>
+      <div class="right-section">
+        <img src="" alt="">
+      </div>
+  
+</div>
 
 
 
