--- a/contact.html
+++ b/contact.html
@@ -31,8 +31,16 @@
   </nav>
 </header>
 
-<h1>NEED TO CONTACT US?</h1>
-<h2>Get in touch with us for questions, feedback, or support.</h2>
+<div class="background-img">
+      <img src="img/body-bg.jpg" alt="">
+    </div>
+    
+  <div class="content">
+    <h1 class="content-header">NEED TO CONTACT US?</h1>
+    <div class="content-paragraph">
+      Get in touch with us for questions, feedback, or support.
+    </div>
+  </div>
 
 <div class="line-img"><img src="img/Line.png" alt=""> </div>
 
